refactor: replace stringly-typed config properties with enums
Introduce DedupStrategy, CompliancePolicyMode, ConflictStrategy,
InvariantRuleType, and RunHistoryStoreType enums to replace raw
String switches in configuration. Type Authority and InvariantStrength
directly in InvariantRuleDefinition and ChatSeedAnchor. Remove dead
mutationStrategy property and unnecessary null checks on conflict config.